Modified home callout CSS

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,6 @@
-<h2>Maid service website</h2>
+<div class="home-callout text-center container-fluid">
+  
+  <h1>Maid and cleaning service in South Jersey</h1>
+  <h3>Select the number of bedrooms and bathroom, see your price, and schedule maid service in 60 seconds!</h3>
+
+</div>
