--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,10 +16,27 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
-body, .navbar {
+.navbar{
   background-color: #36373b;
 }
 
+.home-callout {
+
+  margin-top: -20px;
+  padding-top: 250px;
+  padding-bottom: 100px;
+  padding-left: 0px;
+  padding-right: 0px;
+  background-image:url('StockSnap_CLD6T4J9VZ.jpg');
+  background-repeat:no-repeat;
+  background-position:center;
+  h1, h3 {
+    color: white;
+ 
+  }
+}
 .navbar {
   border: none;
 }
+
+
