--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,9 @@
 
 .navbar{
   background-color: #36373b;
+  padding-top:20px;
+  padding-bottom: 20px;
+  
 }
 
 .home-callout {
@@ -32,6 +35,7 @@
   background-position:center;
   h1, h3 {
     color: white;
+    font-weight: bold;
  
   }
 }
@@ -41,6 +45,7 @@
 
 .navbar-default .navbar-brand {
   color: white;
+  font-size: 28px
 }
 .navbar-default .navbar-brand:hover{
   color: white;
@@ -49,6 +54,7 @@
 
 .navbar-default .navbar-nav > li > a {
   color: white;
+  font-size: 18px;
 }
 
 .navbar-default .navbar-nav > li > a:hover{
