Changed background callout picture size

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,11 +26,11 @@
 .home-callout {
   
   margin-top: -20px;
-  padding-top: 50px;
+  padding-top: 25px;
   padding-bottom: 500px;
   padding-left: 0px;
   padding-right: 0px;
-  background-image:url('StockSnap_CLD6T4J9VZ.jpg');
+  background-image:url('room2.jpg');
   background-repeat:no-repeat;
   background-position:center;
   h1, h3 {
