--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,10 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+// Font Awesome
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
 .navbar{
   background-color: #36373b;
   padding-top:20px;
