--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
-<h1>About Page</h1>
+<div class="container text-center">
+  <h1>About Page</h1>
+  <p>We are MaidServices. Our comapny focuses on providing an easy to use 
+  way of booking a cleaning service to the South Jersey area.</p>
+</div>
