Added background color to home page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,9 +35,10 @@
   padding-bottom: 500px;
   padding-left: 0px;
   padding-right: 0px;
-  background-image:url('room2.jpg');
-  background-repeat:no-repeat;
-  background-position:center;
+ // background:image-url('room2.jpg');
+ // background-repeat:no-repeat;
+ // background-position:center;
+ background-color: #535459;
   h1, h3 {
     color: white;
     font-weight: bold;
