--- a/app/views/cleanings/new.html.erb
+++ b/app/views/cleanings/new.html.erb
@@ -1,1 +1,39 @@
-<h1>Cleanings Form</h1>
+<div class="container">
+  <div class="row">
+    <h3 class="text-center">Contact Us</h3>
+    <div class="col-md-4 col-md-offset-4">
+    
+      <div class="well">
+        <%= form_for "/cleanings" do |f| %>
+          <div class="form-group">
+            <h2>Contact Information</h2>
+            <div class="form-group first-name">
+              <%= f.label :name, "First Name" %>
+              <%= f.text_field :name, class: 'form-control' %>
+            </div>
+            <div class="form-group last-name">
+              <%= f.label :name, "Last Name" %>
+              <%= f.text_field :name, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :email %>
+              <%= f.text_field :email, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :phone_number %>
+              <input type="text" class="form-control bfh-phone" data-format="+1 (ddd) ddd-dddd">
+            </div>
+          </div>
+          <div class="form-group">
+            <h2>Service Address</h2>
+          </div>
+          <div class="form-group">
+            <%= f.label :comments %>
+            <%= f.text_area :comments, class: 'form-control' %>
+          </div>
+          <%= f.submit 'Submit', class: 'btn btn-default' %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
