--- a/app/views/cleanings/new.html.erb
+++ b/app/views/cleanings/new.html.erb
@@ -1,32 +1,42 @@
 <div class="container">
   <div class="row">
-    <h3 class="text-center">Contact Us</h3>
+    <h3 class="text-center">Complete Your Booking</h3>
     <div class="col-md-4 col-md-offset-4">
-    
+      
       <div class="well">
         <%= form_for "/cleanings" do |f| %>
+        
           <div class="form-group">
             <h2>Contact Information</h2>
-            <div class="form-group first-name">
-              <%= f.label :name, "First Name" %>
-              <%= f.text_field :name, class: 'form-control' %>
-            </div>
-            <div class="form-group last-name">
-              <%= f.label :name, "Last Name" %>
-              <%= f.text_field :name, class: 'form-control' %>
-            </div>
+              <div class="form-group name">
+                <%= f.text_field :name, class: 'form-control', placeholder: "Full Name" %>
+              </div>
             <div class="form-group">
-              <%= f.label :email %>
-              <%= f.text_field :email, class: 'form-control' %>
+              <%= f.text_field :email, class: 'form-control', placeholder: "Email" %>
             </div>
             <div class="form-group">
               <%= f.label :phone_number %>
-              <input type="text" class="form-control bfh-phone" data-format="+1 (ddd) ddd-dddd">
+              <input type="text" class="form-control bfh-phone"  placeholder="Phone Number" data-format="+1 (ddd) ddd-dddd">
             </div>
           </div>
           <div class="form-group">
             <h2>Service Address</h2>
-          </div>
+            <div class="form-group street-address">
+              <%= f.text_field :street_address, class: 'form-control', placeholder: "Street Address" %>
+            </div>
+            <div class="form-group apt-number">
+              <%= f.text_field :apt_number, class: 'form-control', placeholder: "Apt # (optional)" %>
+            </div>
+            <div class="form-group city">
+              <%= f.text_field :city, class: 'form-control', placeholder: "City" %>
+            </div>
+            <div class="form-group state">
+            	<span class="form-control bfh-states" data-country="US" data-state="NJ"></span>
+            </div>
+            <div class="form-group zipcode">
+              <%= f.text_field :zipcode, class: 'form-control', placeholder: "Zipcode" %>
+            </div>
+          
           <div class="form-group">
             <%= f.label :comments %>
             <%= f.text_area :comments, class: 'form-control' %>
