--- a/app/views/cleanings/new.html.erb
+++ b/app/views/cleanings/new.html.erb
@@ -3,47 +3,128 @@
     <h3 class="text-center">Complete Your Booking</h3>
     <div class="col-md-4 col-md-offset-4">
       
-      <div class="well">
+      
         <%= form_for "/cleanings" do |f| %>
-        
+        <div class="well">
           <div class="form-group">
-            <h2>Contact Information</h2>
-              <div class="form-group name">
-                <%= f.text_field :name, class: 'form-control', placeholder: "Full Name" %>
+              <h2>Contact Information</h2>
+              <h6 class="clean-form-h6">This information will be used to contact you about your service</h6>
+                <div class="form-group name">
+                  <%= f.text_field :name, class: 'form-control', placeholder: "Full Name" %>
+                </div>
+              <div class="form-group">
+                <%= f.text_field :email, class: 'form-control', placeholder: "Email" %>
               </div>
-            <div class="form-group">
-              <%= f.text_field :email, class: 'form-control', placeholder: "Email" %>
-            </div>
-            <div class="form-group">
-              <%= f.label :phone_number %>
-              <input type="text" class="form-control bfh-phone"  placeholder="Phone Number" data-format="+1 (ddd) ddd-dddd">
+              <div class="form-group">
+                <%= f.label :phone_number %>
+                <input type="text" class="form-control bfh-phone" data-format="+1 (ddd) ddd-dddd">
+              </div>
             </div>
           </div>
-          <div class="form-group">
-            <h2>Service Address</h2>
-            <div class="form-group street-address">
-              <%= f.text_field :street_address, class: 'form-control', placeholder: "Street Address" %>
+          <div class="well">
+            <div class="form-group">
+              <h2>Service Address</h2>
+              <h6 class="clean-form-h6">Where would you like us to clean?</h6>
+              <div class="form-group street-address">
+                <%= f.text_field :street_address, class: 'form-control', placeholder: "Street Address" %>
+              </div>
+              <div class="form-group apt-number">
+                <%= f.text_field :apt_number, class: 'form-control', placeholder: "Apt # (optional)" %>
+              </div>
+              <div class="form-group city">
+                <%= f.text_field :city, class: 'form-control', placeholder: "City" %>
+              </div>
+              <div class="form-group state">
+              	<span class="form-control bfh-states" data-country="US" data-state="NJ"></span>
+              </div>
+              <div class="form-group zipcode">
+                <%= f.text_field :zipcode, class: 'form-control', placeholder: "Zipcode" %>
+              </div>
             </div>
-            <div class="form-group apt-number">
-              <%= f.text_field :apt_number, class: 'form-control', placeholder: "Apt # (optional)" %>
+          </div>
+          <div class="well">
+            <div class="form-group">
+              <h2>Choose Your Service</h2>
+              <h6>Tell us about your home.</h6>
+
+              <h5 class="num-bedrooms-header">Bedrooms:</h5>
+              <div class="btn-group" role="group" aria-label="...">
+                <button type="button" class="btn btn-default">1</button>
+                <button type="button" class="btn btn-default">2</button>
+                <button type="button" class="btn btn-default">3</button>
+                <button type="button" class="btn btn-default">4</button>
+              </div>
+              <h5 class="num-bedrooms-header">Bathrooms:</h5>
+              <div class="btn-group" role="group" aria-label="...">
+                <button type="button" class="btn btn-default">1</button>
+                <button type="button" class="btn btn-default">2</button>
+                <button type="button" class="btn btn-default">3</button>
+                <button type="button" class="btn btn-default">4</button>
+              </div>
             </div>
-            <div class="form-group city">
-              <%= f.text_field :city, class: 'form-control', placeholder: "City" %>
+          </div>
+          <div class="well">
+            <div class="form-group">
+              <h2>Select Extras</h2>
+              <h6>Adds extra time.</h6>
+         
+             
+              <label class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input fridge">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Inside the fridge</span>
+              </label>
+              </br>
+              <label class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input oven">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Inside the oven</span>
+              </label>
+              </br>
+              <label class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input green">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Green cleaning</span>
+              </label>
+              </br>
+              <label class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input windows">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Inside windows</span>
+              </label>
+              </br>
+              <label class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input basement">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Basement</span>
+              </label>
+              </br>
+              <label class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input moving">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Move in/Move out</span>
+              </label>
+              </br>
+              <label class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input laundry">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Load of laundry</span>
+              </label>
+              </br>
+              <label class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input cabinets">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Inside cabinets</span>
+              </label>
+           
+         
             </div>
-            <div class="form-group state">
-            	<span class="form-control bfh-states" data-country="US" data-state="NJ"></span>
-            </div>
-            <div class="form-group zipcode">
-              <%= f.text_field :zipcode, class: 'form-control', placeholder: "Zipcode" %>
-            </div>
+          </div>
           
-          <div class="form-group">
-            <%= f.label :comments %>
-            <%= f.text_area :comments, class: 'form-control' %>
-          </div>
-          <%= f.submit 'Submit', class: 'btn btn-default' %>
+    </div>
+          <%= f.submit 'Submit', class: 'btn btn-default' %> 
         <% end %>
       </div>
-    </div>
+    
   </div>
 </div>
